--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/python-logo (1).png" alt="Python"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Python is an interpreted, high-level and general-purpose programming language. Created by Guido van Rossum and first released in 1991, Python's design philosophy emphasizes code readability with its notable use of significant whitespace. Its language constructs and object-oriented approach aim to help programmers write clear, logical code for small and large-scale projects.</p>
+                                    <p class="mb-5">Python is an interpreted, high-level and general-purpose programming language. Its language constructs and object-oriented approach aim to help programmers write clear, logical code for small and large-scale projects.</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
@@ -205,7 +205,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/unreal afas.png" alt="MySQL"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">MySQL is a freely available open source Relational Database Management System (RDBMS) that uses Structured Query Language (SQL). SQL is the most popular language for adding, accessing and managing content in a database. It is most noted for its quick processing, proven reliability, ease and flexibility of use.</p>
+                                    <p class="mb-5">MySQL is a freely available open source Relational Database Management System (RDBMS) that uses Structured Query Language (SQL).</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
@@ -232,7 +232,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/godot.png" alt="Godot"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Godot is a 2D and 3D, cross-platform, free and open-source game engine released under the MIT license. The development environment runs on multiple operating systems including Linux, macOS, and Windows. Godot can create games targeting PC, mobile, and web platforms.</p>
+                                    <p class="mb-5">Godot is a 2D and 3D, cross-platform, free and open-source game engine released under the MIT license. The development environment runs on multiple operating systems including Linux, macOS, and Windows.</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
@@ -259,7 +259,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/unreal engine.png" alt="Unreal Engine"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">The Unreal Engine is a game engine developed by Epic Games, first showcased in the 1998 first-person shooter game Unreal. Although initially developed for first-person shooters, it has been used in a variety of other genres, including platformers, fighting games, MMORPGs, and other RPGs.</p>
+                                    <p class="mb-5">The Unreal Engine is a game engine developed by Epic Games. It has been used in a variety of genres including platformers, fighting games, MMORPGs, and other RPGs.</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
