--- a/index.html
+++ b/index.html
@@ -285,14 +285,12 @@
                     <div class="col-lg-4 ml-auto">
                         <p class="pre-wrap lead">Using Python:
 AI based recommendation engine for books (AIRE)
-Age calculator
-Rock, paper, scissors
+Russian Roulette
 </p>
                     </div>
                     <div class="col-lg-4 mr-auto">
                         <p class="pre-wrap lead">Using unity:
-A platformer game
-Ping pong game</p>
+A platformer game</p>
                     </div>
                 </div>
             </div>
